--- a/Info.plist
+++ b/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleExecutable</key>
     <string>${PRODUCT_NAME}</string>
     <key>CFBundleGetInfoString</key>
-    <string>${BUNDLE_VERSION}, Copyright 2003-2007 Apple Inc.</string>
+    <string>${BUNDLE_VERSION}, Copyright 2003-2009 Apple Inc.</string>
     <key>CFBundleIdentifier</key>
     <string>com.apple.${PRODUCT_NAME}</string>
     <key>CFBundleInfoDictionaryVersion</key>
@@ -17,7 +17,7 @@
     <key>CFBundlePackageType</key>
     <string>FMWK</string>
     <key>CFBundleShortVersionString</key>
-    <string>${BUNDLE_VERSION}</string>
+    <string>${SHORT_VERSION_STRING}</string>
     <key>CFBundleVersion</key>
     <string>${BUNDLE_VERSION}</string>
 </dict>
